--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+#https://isa-ko.github.io/Indigo/index
+#bundle exec jekyll serve
 # main text of home
 title: Isa ko
 bio: A Person who travels the world eating noodles
