--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: A blog about technology and stuff related
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/photo.jpg
+picture: assets/images/photo.png
 
 # your site color theme, true for dark theme, 
 # false to light theme, auto to switch with system.
