--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ resume: true
 resume-external: true
 resume-url: https://google.com/?q=my+resume
 
-url: https://sergiokopplin.github.io/indigo
+url: https://isa-ko.github.io/Indigo
 # your url: https://USERNAME.github.io
 
 permalink: /:title/
